feat: added menu search service